js/js.translator/testData/incremental/invalidationWithPL/removeFunctionFromChainCall/lib1/klass.4.kt
class Klass {
    inline fun foo() = 4
}